--- a/.github/workflows/php-psalm.yml
+++ b/.github/workflows/php-psalm.yml
@@ -14,6 +14,7 @@ jobs:
     strategy:
       matrix:
         php-versions: ["7.4", "8.0", "8.1"]
+        ocp-version: ['v24.0.1']
     name: php-psalm-analysis
 
     steps:
